--- a/index.html
+++ b/index.html
@@ -23,10 +23,24 @@
   <link rel="preload" as="image" href="./assets/images/product-01.jpg">
   <link rel="preload" as="image" href="./assets/images/product-02.jpg">
   <link rel="preload" as="image" href="./assets/images/product-03.jpg">
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 
 </head>
 
 <body id="top" class="theme-jewelry">
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
+  
   <!-------- Header -------->
   <header class="site-header">
     <div class="container">
