Enhanced the appearance and contact section

--- a/index.html
+++ b/index.html
@@ -115,9 +115,13 @@
           <a href="#top">Home</a>
           <a href="#shop">Shop</a>
           <a href="#about">About</a>
-          <a href="https://www.instagram.com/saaheli.in/" target="_blank" rel="noopener noreferrer" class="instagram-link">
+          <a href="https://www.instagram.com/saaheli.in/" target="_blank" rel="noopener noreferrer" class="contact-link">
             <ion-icon name="logo-instagram"></ion-icon>
-            Contact Us
+            Instagram
+          </a>
+          <a href="mailto:saaheliin@gmail.com" class="contact-link">
+            <ion-icon name="mail-outline"></ion-icon>
+            Email
           </a>
         </div>
       </div>
