--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
   <!-------- Custom JS links -------->
   <script src="/assets/js/products.js" defer></script>
-  <script src="./assets/js/script.js" defer></script>
+  <script src="/assets/js/script.js" defer></script>
 
   <!-------- Ionicon link -------->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
